# chrono-probe

./: .gitignore  Cargo.toml  README.md
examples/search/: algorithms.rs  input.rs  main.rs
examples/sorting/: algorithms.rs  input.rs  main.rs
results/: README.md
src/: algorithms.rs  distribution.rs  input.rs  lib.rs  main.rs  measurements.rs  plot.rs  random.rs
src/input/: distribution.rs  implementations.rs  mod.rs
src/input/impls/: distribution.rs  mod.rs
src/random/: lengths.rs  mod.rs  strings.rs
tests/: algorithms.rs
