[package]
name = "chrono-probe"
version = "0.1.0"
edition = "2021"
description = "Compare and measure the time complexity of algorithms"
license = "MIT"
repository = "https://github.com/ADS-laboratory/chrono-probe.git"
readme = "README.md"
authors = ["Danelutti Leonardo", "Della Giustina Lorenzo", "Bortuzzo Francesco"]
keywords = ["time-complexity", "plot", "algorithm", "measure", "benchmark"]
categories = ["algorithms", "plot", "benchmark"]

[features]
debug = []

[dependencies]
plotters = "0.3.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"